--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -7,19 +7,19 @@
     <div class="col-md-6 d-flex justify-content-right border-left">
       <form (ngSubmit)="login(formData)" #formData="ngForm">
         <div class="form-group">
-          <label for="mail">Email address</label>
-          <input ngModel type="email" class="form-control" name="mail" aria-describedby="emailHelp" required>
+          <label for="username">Username</label>
+          <input ngModel type="username" class="form-control" name="username" required>
         </div>
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" name="password" required>
+          <input ngModel type="password" class="form-control" name="password" required>
         </div>
         <button type="submit" class="btn btn-primary" [disabled]=formData.invalid>LogIn</button>
       </form>
     </div>
   </div>
   <hr>
-  <div>JWT Token: {{jwtToken.jwtToken}}</div><BR>
+  <div>JWT Token: {{jwtToken}}</div><BR>
   <button (click)="showDecodedData()" class="btn-secondary">Show decoded Value</button>
   <div *ngIf="jwtToken.name != null">User: {{jwtToken.name}}</div>
   <div *ngIf="jwtToken.hasRole != null">Role: {{jwtToken.hasRole}}</div>
